--- a/src/components/MoviesSearching/MoviesSearching.module.css
+++ b/src/components/MoviesSearching/MoviesSearching.module.css
@@ -14,7 +14,7 @@
   padding-left: 15px;
 }
 .moviesSearching__button {
-  background-color: rgb(25, 76, 71);
+  background-color: rgba(25, 76, 71, 0.856);
   color: white;
   border: none;
   width: 90px;
