--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -22,9 +22,21 @@
   text-decoration: none;
   padding: 5px;
   font-weight: 700px;
+  color: rgb(0, 0, 0);
 }
 
 .header__navItem:hover,
 .header__navItem:focus {
-  border-bottom: 2px solid #133022;
+  border-bottom: 2px solid rgb(17, 136, 122);
+}
+
+.header__navItem:hover {
+  color: rgb(0, 0, 0);
+}
+
+.header__navItem:visited {
+  color: rgb(0, 0, 0);
+}
+.header__navItem:active {
+  color: rgb(0, 0, 0);
 }
