--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,6 @@
 .trendingMovies__container {
+  margin: 0;
+  padding: 0;
   display: flex;
   gap: 5px;
   padding-left: 20px;
@@ -7,8 +9,9 @@
 }
 
 .trendingMovies__header {
-  padding: 0;
-  font-size: 25px;
+  margin: 0;
+  font-size: 18px;
+  padding: 12px 0px 5px 0px;
 }
 .trendingMovies__list {
   list-style-type: decimal;
@@ -16,6 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 20px;
 }
 
 .trendingMovies__link {
